# repo-name-checker

./: AGENTS.md  README.md  putitoutthere.toml  pyproject.toml
.github/workflows/: ci.yml  pr-monitor.yml  release.yml
src/repo_name_checker/: __init__.py  cli.py  cli_test.py  sdk.py  sdk_test.py  types.py  types_test.py
src/repo_name_checker/registries/: __init__.py  base.py  base_test.py  crates.py  crates_test.py  npm.py  npm_test.py  pypi.py  pypi_test.py
tests/e2e/: test_e2e.py
tests/integration/: test_sdk_integration.py
